# thunar-vcs-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt  module.xml
icons/: Makefile.am  meson.build
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/48x48/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  hye_RU.po  id.po  ie.po  is.po  it.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pk.po  pl.po  pt.no  (+20 more)
thunar-svn-plugin/: Makefile.am  thunar-svn-plugin.c  tsp-provider.c  tsp-provider.h  tsp-svn-action.c  tsp-svn-action.h  tsp-svn-backend.c  tsp-svn-backend.h  tsp-svn-property-page.c  tsp-svn-property-page.h
thunar-vcs-plugin/: Makefile.am  meson.build  thunar-vcs-plugin.c  tvp-git-action.c  tvp-git-action.h  tvp-provider.c  tvp-provider.h  tvp-svn-action.c  tvp-svn-action.h  tvp-svn-backend.c  tvp-svn-backend.h  tvp-svn-property-page.c  tvp-svn-property-page.h
tsp-svn-helper/: Makefile.am  gtkfilechooserdefault.c  gtkfilechooserentry.c  gtkfilechooserentry.h  gtkfilechooserutils.c  gtkfilechooserutils.h  gtkprivate.h  main.c  tsh-add.c  tsh-add.h  tsh-blame-dialog.h  tsh-blame.c  tsh-blame.h  tsh-checkout-dialog.c  tsh-checkout-dialog.h  tsh-checkout.c  tsh-checkout.h  tsh-cleanup.c  tsh-commit.c  tsh-commit.h  tsh-common.c  tsh-common.h  tsh-copy.c  tsh-delete.c  tsh-delete.h  tsh-dialog-common.h  tsh-export.c  tsh-export.h  tsh-file-dialog.c  tsh-file-dialog.h  tsh-file-selection-dialog.c  tsh-file-selection-dialog.h  tsh-import.c  tsh-import.h  tsh-lock-dialog.c  tsh-lock.c  tsh-lock.h  tsh-log-dialog.c  tsh-log-dialog.h  tsh-log-message-dialog.c  (+27 more)
tvp-git-helper/: Makefile.am  main.c  meson.build  tgh-add.c  tgh-add.h  tgh-blame-dialog.c  tgh-blame-dialog.h  tgh-blame.c  tgh-blame.h  tgh-branch-dialog.c  tgh-branch-dialog.h  tgh-branch.c  tgh-branch.h  tgh-cell-renderer-graph.c  tgh-cell-renderer-graph.h  tgh-clean-dialog.c  tgh-clean-dialog.h  tgh-clean.c  tgh-clean.h  tgh-clone.c  tgh-clone.h  tgh-common.c  tgh-common.h  tgh-dialog-common.c  tgh-dialog-common.h  tgh-file-selection-dialog.c  tgh-file-selection-dialog.h  tgh-log-dialog.c  tgh-log-dialog.h  tgh-log.c  tgh-log.h  tgh-move.c  tgh-move.h  tgh-notify-dialog.c  tgh-notify-dialog.h  tgh-reset-dialog.c  tgh-reset-dialog.h  tgh-reset.c  tgh-reset.h  tgh-stash-dialog.c  (+9 more)
tvp-svn-helper/: Makefile.am  gtkfilechooser.c  gtkfilechooser.h  gtkfilechooserentry.c  gtkfilechooserentry.h  gtkfilechooserprivate.h  main.c  meson.build  tsh-add.c  tsh-add.h  tsh-blame-dialog.c  tsh-blame-dialog.h  tsh-blame.c  tsh-blame.h  tsh-checkout.c  tsh-checkout.h  tsh-cleanup.c  tsh-cleanup.h  tsh-commit.c  tsh-commit.h  tsh-common.c  tsh-common.h  tsh-copy.c  tsh-copy.h  tsh-delete.c  tsh-delete.h  tsh-dialog-common.c  tsh-dialog-common.h  tsh-diff-dialog.c  tsh-diff-dialog.h  tsh-diff.c  tsh-diff.h  tsh-export.c  tsh-export.h  tsh-file-dialog.c  tsh-file-dialog.h  tsh-file-selection-dialog.c  tsh-file-selection-dialog.h  tsh-import.c  tsh-import.h  (+44 more)
