tgh_sources = [
  'main.c',
  'tgh-add.c',
  'tgh-add.h',
  'tgh-blame-dialog.c',
  'tgh-blame-dialog.h',
  'tgh-blame.c',
  'tgh-blame.h',
  'tgh-branch-dialog.c',
  'tgh-branch-dialog.h',
  'tgh-branch.c',
  'tgh-branch.h',
  'tgh-cell-renderer-graph.c',
  'tgh-cell-renderer-graph.h',
  'tgh-clean-dialog.c',
  'tgh-clean-dialog.h',
  'tgh-clean.c',
  'tgh-clean.h',
  'tgh-clone.c',
  'tgh-clone.h',
  'tgh-common.c',
  'tgh-common.h',
  'tgh-dialog-common.c',
  'tgh-dialog-common.h',
  'tgh-file-selection-dialog.c',
  'tgh-file-selection-dialog.h',
  'tgh-log-dialog.c',
  'tgh-log-dialog.h',
  'tgh-log.c',
  'tgh-log.h',
  'tgh-move.c',
  'tgh-move.h',
  'tgh-notify-dialog.c',
  'tgh-notify-dialog.h',
  'tgh-reset.c',
  'tgh-reset.h',
  'tgh-stash-dialog.c',
  'tgh-stash-dialog.h',
  'tgh-stash.c',
  'tgh-stash.h',
  'tgh-status-dialog.c',
  'tgh-status-dialog.h',
  'tgh-status.c',
  'tgh-status.h',
  'tgh-transfer-dialog.c',
  'tgh-transfer-dialog.h',
]

tgh = executable(
  'tvp-git-helper',
  tgh_sources,
  sources: xfce_revision_h,
  c_args: [
    '-DG_LOG_DOMAIN="tvp-git-helper"'
  ],
  dependencies: [
    exo,
    glib,
    gobject,
    gtk,
    libxfce4ui,
    libxfce4util,
  ],
  install: true,
  install_dir: get_option('prefix') / get_option('libexecdir'),
)
