tsh_sources = [
  'main.c',
  'tsh-add.c',
  'tsh-add.h',
  'tsh-blame-dialog.c',
  'tsh-blame-dialog.h',
  'tsh-blame.c',
  'tsh-blame.h',
  'tsh-checkout.c',
  'tsh-checkout.h',
  'tsh-cleanup.c',
  'tsh-cleanup.h',
  'tsh-commit.c',
  'tsh-commit.h',
  'tsh-common.c',
  'tsh-common.h',
  'tsh-copy.c',
  'tsh-copy.h',
  'tsh-delete.c',
  'tsh-delete.h',
  'tsh-dialog-common.c',
  'tsh-dialog-common.h',
  'tsh-diff-dialog.c',
  'tsh-diff-dialog.h',
  'tsh-diff.c',
  'tsh-diff.h',
  'tsh-export.c',
  'tsh-export.h',
  'tsh-file-dialog.c',
  'tsh-file-dialog.h',
  'tsh-file-selection-dialog.c',
  'tsh-file-selection-dialog.h',
  'tsh-import.c',
  'tsh-import.h',
  'tsh-lock-dialog.c',
  'tsh-lock-dialog.h',
  'tsh-lock.c',
  'tsh-lock.h',
  'tsh-log-dialog.c',
  'tsh-log-dialog.h',
  'tsh-log-message-dialog.c',
  'tsh-log-message-dialog.h',
  'tsh-log.c',
  'tsh-log.h',
  'tsh-login-dialog.c',
  'tsh-login-dialog.h',
  'tsh-move.c',
  'tsh-move.h',
  'tsh-notify-dialog.c',
  'tsh-notify-dialog.h',
  'tsh-properties-dialog.c',
  'tsh-properties-dialog.h',
  'tsh-properties.c',
  'tsh-properties.h',
  'tsh-relocate-dialog.c',
  'tsh-relocate-dialog.h',
  'tsh-relocate.c',
  'tsh-relocate.h',
  'tsh-resolved.c',
  'tsh-resolved.h',
  'tsh-revert.c',
  'tsh-revert.h',
  'tsh-status-dialog.c',
  'tsh-status-dialog.h',
  'tsh-status.c',
  'tsh-status.h',
  'tsh-switch.c',
  'tsh-switch.h',
  'tsh-transfer-dialog.c',
  'tsh-transfer-dialog.h',
  'tsh-tree-common.c',
  'tsh-tree-common.h',
  'tsh-trust-dialog.c',
  'tsh-trust-dialog.h',
  'tsh-unlock.c',
  'tsh-unlock.h',
  'tsh-update.c',
  'tsh-update.h',
]

tsh = executable(
  'tvp-svn-helper',
  tsh_sources,
  sources: xfce_revision_h,
  c_args: [
    '-DG_LOG_DOMAIN="tvp-svn-helper"'
  ],
  dependencies: [
    exo,
    glib,
    gobject,
    gthread,
    gtk,
    libxfce4ui,
    libxfce4util,
    svn_deps,
  ],
  install: true,
  install_dir: get_option('prefix') / get_option('libexecdir'),
)
